--- a/report/pom.xml
+++ b/report/pom.xml
@@ -20,8 +20,8 @@
         </dependency>
         <dependency>
             <groupId>com.woact.dolplads</groupId>
-            <artifactId>frontend</artifactId>
-            <version>${project.version}</version>
+            <artifactId>quizApi</artifactId>
+            <version>1.0-SNAPSHOT</version>
             <type>war</type>
         </dependency>
     </dependencies>
