--- a/report/pom.xml
+++ b/report/pom.xml
@@ -24,6 +24,11 @@
             <version>1.0-SNAPSHOT</version>
             <type>war</type>
         </dependency>
+        <dependency>
+            <groupId>com.woact.dolplads</groupId>
+            <artifactId>gameApi</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
